fixed spacing and animation speed bug

--- a/src/Row.css
+++ b/src/Row.css
@@ -2,8 +2,21 @@
   max-height: 100px;
   object-fit: contain;
   width: 100%;
+  margin-right: 10px;
+  transition: transform 450ms;
+}
+
+.row_poster:hover {
+  transform: scale(1.08);
 }
 
 .row_posters {
   display: flex;
+  overflow-y: hidden;
+  overflow-x: scroll;
+  padding: 20px;
+}
+
+.row_posters::-webkit-scrollbar {
+  display: none;
 }
